fix image size on mobile devices

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -413,7 +413,7 @@ footer {
   }
 
   .fancybox img {
-      width: 30%;
+      height: 60px;
   }
 
   #head1o2 {
